--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is </div>
                 <div class="text-2">Nathan Everette</div>
-                <div class="text-3">And I am <span>still building this website.</span></div>
+                <div class="text-3">And I am <span> building this website.</span></div>
             </div>
         </div>
     </section>
