--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale1.0">
-    <title>Nathan Everette website</title>
+    <title>Nathan Everette</title>
+    <link rel="icon" href="/favicon.ico?" type="image/x-icon">
     <link rel="stylesheet" href="style.css"/>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -31,7 +32,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is </div>
                 <div class="text-2">Nathan Everette</div>
-                <div class="text-3">And I am <span> building this website.</span></div>
+                <div class="text-3">And I am <span>still building this website.</span></div>
             </div>
         </div>
     </section>
