--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale1.0">
     <meta name="theme-color" content="#b64340" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#532c34" media="(prefers-color-scheme: dark)">
+  <meta name="theme-color" content="rgb(24, 30, 40)" media="(prefers-color-scheme: dark)">
     <title>Nathan Everette</title>
     <link rel="icon" href="/favicon.ico?" type="image/x-icon">
     <link rel="stylesheet" href="style.css"/>
