--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="column right">
                     <div class="text">I'm Nathan, a <span>computer science student</span>.</div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum omnis est, ad ea non debitis veritatis excepturi assumenda ipsa ex pariatur vero explicabo. Delectus molestiae odit officiis sit et explicabo cupiditate magni ab reprehenderit neque expedita quidem assumenda cum enim, ipsum eos error. Libero, eligendi necessitatibus pariatur deleniti eum natus accusamus, dolorem quibusdam sequi itaque beatae dolorum optio fugiat asperiores!</p>
-                    <a href="#">Download my Resume</a>
+                    <a href="#"><i class="fas fa-download"></i>  Download my Resume</a>
                 </div>
             </div>
         </div>
