done for now p2

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
        resume
      </a>
    </button> -->
-    <h2 class="w3-text-green">projects.</h2>
+    <h2 class="w3-text-green" id="projects">projects.</h2>
     <hr style="width:200px" class="w3-opacity">
     <div class="w3-row">
       <h4>golden</h4><p><i>[backend, database, project manager]</i></p>
