--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         
         <h2 class="w3-padding-large w3-center">
           <button class="w3-button  w3-light-grey w3-center" style="padding: 0px 10px; border-radius: 1%; ">
-            <i class="fa fa-download"></i><a href="/NathanEverette_Resume.pdf" style="text-decoration: none; font-family: Nunito, sans-serif;"download>
+            <i class="fa fa-download"></i><a href="docs//NathanEverette_Resume.pdf" style="text-decoration: none; font-family: Nunito, sans-serif;"download>
              
               &emsp;my resume
            </a>
