--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
            </a>
          </button> -->
         </h2>
-        <img src="images/meme.png" alt="boy" class="w3-image" width="25%" style="border: 5px; border-radius: 50%; border-style: solid ;border-color: rgb(78, 163, 78); ">
+        <img src="images/face.png" alt="boy" class="w3-image" width="25%" style="border: 5px; border-radius: 50%; border-style: solid ;border-color: rgb(78, 163, 78); ">
         
         <h2 class="w3-padding-large w3-center">
           <button class="w3-button  w3-light-grey w3-center" style="padding: 0px 10px; border-radius: 1%; ">
