--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
       </p> 
       <hr style="width:200px" class="w3-opacity">
       <h4>Zuora</h4><p>Salesforce integration project<br><i>[backend, scrum master]</i></p>
-      <img src="images/zuora.png" style="width:60%">
+      <img src="images/zuora2.png" style="width:60%">
       <p class="w3-text-grey">
         Capstone project in partnership with world leading monotization platform <a href="https://www.zuora.com" class="w3-text-green w3-hover-white">Zuora.</a><br><br>
         Currently, enterprise customers of Zuora must manually sync customer account data between Zuora and Salesforce. We were tasked with developing an API to automatically sync account data between the two. <br><br>
         Implemented using: APEX language, Salesforce Developer Environment, Zuora, and Postman.
         <br><br>
-        This project is current and will be completed upon April 25th, 2023. Code, videos, and presentations will be posted here upon finalization.<br><br>
+        See the GitHub repository, documentation, and funny video <a href="https://github.com/everettens/Capstone2023-Zuora-Salesforce-Integration" class="w3-text-green w3-hover-white">here</a>.<br><br>
 
       </p> 
     </div>
